# Game-of-Life-SFML-

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: cellPlane.hpp  cells.hpp  draw.cpp  events.cpp  flatland.hpp  game.cpp  gameOfLife.cpp  grid.hpp  main.cpp
